--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 
 
+		<section id="one" class="wrapper style2 spotlights">
 		<!-- One -->
 		<!-- Facial Recognition -->
-		<section id="one" class="wrapper style2 spotlights">
-			<section>
+			<section class>
 				<a href="#" class="image"><img src="/html5up-hyperspace/images/Facial_Recognition.png" alt=""
 						data-position="center center" /></a>
 				<div class="content">
@@ -80,7 +80,7 @@
 
 			<!-- Two -->
 			<!-- Smart Lock -->
-			<section>
+			<section class>
 				<a href="#" class="image"><img src="/html5up-hyperspace/images/Smart_lock.png" alt="" data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
@@ -97,7 +97,7 @@
 
 			<!-- Three -->
 			<!-- Twitter Clone -->
-			<section>
+			<section class>
 				<a href="#" class="image"><img src="/html5up-hyperspace/images/SocialMedia.png" alt="" data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
@@ -114,7 +114,7 @@
 
 			<!-- four -->
 			<!-- HANGMAN -->
-			<section>
+			<section class>
 				<a href="#" class="image"><img src="/html5up-hyperspace/images/Hangman.png" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
@@ -129,7 +129,7 @@
 
 			<!-- Five -->
 			<!-- NBA API  -->
-			<section>
+			<section class>
 				<a href="#" class="image"><img src="/html5up-hyperspace/images/NBA.png" alt="" data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
@@ -137,10 +137,8 @@
 						<p>A web application using an API to display NBA player statistics, display highlights, and
 							track historical data using Python and Flask.</p>
 						<ul class="actions">
-							<ul class="actions">
-
 								<li><a href="/Projects/NBA/NBA.html" class="button">Learn more</a></li>
-							</ul>
+						</ul>
 					</div>
 				</div>
 			</section>
@@ -238,7 +236,7 @@
 
 							</ul>
 						</ul>
-					<a href="resume.pdf" class="button primary" download>View Resume.</a>
+					<a href="/Projects/Resume/Resume.html" class="button primary">View Resume</a>
 							
 
 
