--- a/Projects/NBA/NBA.html
+++ b/Projects/NBA/NBA.html
@@ -23,7 +23,7 @@
         <a href="/html5up-hyperspace/index.html" class="title">NBA Player Stats - Zane Smith</a>
         <nav>
             <ul>
-                <li><a href="/html5up-hyperspace/index.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 
             </ul>
         </nav>
@@ -106,7 +106,7 @@
     </div>
 
     <!-- Footer -->
-    <footer id="footer" class="wrapper alt">
+    <footer id="footer" class="wrapper style1-alt">
         <div class="inner">
             <ul class="menu">
                 <li>&copy; Untitled. All rights reserved.</li>
