--- a/Projects/Social Media/SocialMedia.html
+++ b/Projects/Social Media/SocialMedia.html
@@ -23,7 +23,7 @@
 		<a href="/html5up-hyperspace/index.html" class="title">Social Media App - by Zane Smith</a>
 		<nav>
 			<ul>
-				<li><a href="/html5up-hyperspace/index.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 
 			</ul>
 		</nav>
@@ -114,14 +114,14 @@
 	</div>
 
 	<!-- Footer -->
-	<footer id="footer" class="wrapper alt">
-		<div class="inner">
-			<ul class="menu">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-	</footer>
+  <footer id="footer" class="wrapper style1-alt">
+        <div class="inner">
+            <ul class="menu">
+                <li>&copy; Untitled. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
