--- a/Projects/Facial Recognition/Facial_recognition_report.html
+++ b/Projects/Facial Recognition/Facial_recognition_report.html
@@ -23,7 +23,7 @@
         <a href="/html5up-hyperspace/index.html" class="title">Facial Recognition Project Report - by Zane Smith</a>
         <nav>
             <ul>
-                <li><a href="/html5up-hyperspace/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
 
             </ul>
         </nav>
